[gd_scene load_steps=6 format=3]

[ext_resource type="Script" path="res://bullet_heck/enemy.gd" id="1_1o58s"]
[ext_resource type="PackedScene" path="res://bullet_heck/bullet_enemy.tscn" id="2_23cw4"]
[ext_resource type="PackedScene" uid="uid://cdfiflsa87lrn" path="res://assets/sfx/blast_sfx.tscn" id="3_tmodn"]
[ext_resource type="Texture2D" uid="uid://df7ds73d2jbu5" path="res://assets/simple_space/enemy_D.png" id="3_u7vho"]

[sub_resource type="CircleShape2D" id="CircleShape2D_jw3yn"]
radius = 32.0156

[node name="Enemy" type="RigidBody2D"]
collision_layer = 4
mass = 1000.0
gravity_scale = 2.66454e-15
script = ExtResource("1_1o58s")
bullet_scene = ExtResource("2_23cw4")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_u7vho")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_jw3yn")

[node name="FireTimer" type="Timer" parent="."]

[node name="WeaponSfx" parent="." instance=ExtResource("3_tmodn")]

[connection signal="timeout" from="FireTimer" to="." method="_on_fire_timer_timeout"]
